--- a/bibliography.bib
+++ b/bibliography.bib
@@ -62,26 +62,18 @@
   accessed = {2022-12-10}
 }
 
-@online{Crowther,
-  author = {Crowther, S},
-  title = {What is Puppeteer? Why Developers and Fraudsters Love it},
-  year = {2021},
-  available = {https://www.kasada.io/what-is-puppeteer-developers-fraudsters-love-it},
-  accessed = {2022-12-10}
-}
-
 @inbook{inbook,
-author = {Choudhary, Brijesh and Pophale, Chinmay and Gutte, Aditya and Dani, Ankit and Sonawani, Shilpa},
-year = {2020},
-month = {01},
-pages = {237-244},
-title = {Case Study: Use of AWS Lambda for Building a Serverless Chat Application},
-isbn = {978-981-15-0789-2},
-doi = {10.1007/978-981-15-0790-8_24}
+  author = {Choudhary, Brijesh and Pophale, Chinmay and Gutte, Aditya and Dani, Ankit and Sonawani, Shilpa},
+  year = {2020},
+  month = {01},
+  pages = {237-244},
+  title = {Case Study: Use of AWS Lambda for Building a Serverless Chat Application},
+  isbn = {978-981-15-0789-2},
+  doi = {10.1007/978-981-15-0790-8_24}
 }
 
 @online{Amazon,
-  author = {Amazon Web Services, Inc. (n.d.)},
+  author = {Amazon Web Services, Inc},
   title = {AWS Step Functions Pricing | Serverless Microservice Orchestration | Amazon Web Services},
   year = {2023},
   available = {https://aws.amazon.com/step-functions/pricing/},
